--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
     <title>WebStudio</title>
   </head>
   <body>
@@ -11,12 +12,12 @@
        
        <nav>
        <!-- Логотип -->
-        <a href="./">WebStudio</a>
+        <a class="logo"  href="./">Web<span>Studio</span></a>
         <!-- Навігація -->
-        <ul>
-          <li><a href="">студія</a></li>
-          <li><a href="./portfolio.html">портфоліо</a></li>
-          <li><a href="">контакти</a></li>
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link" href="">студія</a></li>
+          <li class="nav-item"><a class="nav-link" href="./portfolio.html">портфоліо</a></li>
+          <li class="nav-item"><a class="nav-link" href="">контакти</a></li>
         </ul>
       </nav>
       <ul>
