--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href=" https://fonts.googleapis.com ">
+     <link rel="preconnect" href=" https://fonts.gstatic.com " crossorigin> 
+     <link href=" https: //fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap " rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+   
     <title>WebStudio</title>
   </head>
   <body>
@@ -28,7 +32,7 @@
       <main>
         <section>
           <h1>Ефективність нашого бізнесу</h1>
-          <button type="button">замовитти послугу</button>
+          <button type="button">замовити послугу</button>
         </section>
         <section>
         <h2>Переваги</h2>
@@ -66,7 +70,7 @@
 </ul>
 </section>
 <section>
-<h1>Наша команда</h1>
+<h2>Наша команда</h2>
 
 <ul>
 <li>
