--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <main>
         <section>
           <h1>Ефективність нашого бізнесу</h1>
-          <button type="button">замовити послугу</button>
+          <button type="button" class="hero-button">замовити послугу</button>
         </section>
         <section>
         <h2>Переваги</h2>
