--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
       
       <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
      <ul>
-        <li><a href="info@devstudio">info@devstudio</a></li>
-        <li><a href="+30 096 111 11 11 ">+30 096 111 11 11 </a></li>
+        <li><a  class="contacts" href="info@devstudio">info@devstudio</a></li>
+        <li><a class="contacts" href="+30 096 111 11 11 ">+30 096 111 11 11 </a></li>
       </ul>
     </footer>  
   </section>
